# Caveman2Cosmos

./: .gitignore  CMakeLists.txt
Sources/: CvArtFileMgr.cpp  CvBugOptions.cpp  CvBuildLists.cpp  CvBuildingFilters.cpp  CvBuildingSort.cpp  CvCity.cpp  CvCityAI.cpp  CvContractBroker.cpp  CvDLLInterfaceIFaceBase.h  CvDLLUtilityIFaceBase.h  CvDLLWidgetData.cpp  CvDate.cpp  CvDllPythonEvents.cpp  CvDllTranslator.cpp  CvGame.cpp  CvGameCoreDLL.cpp  CvGameCoreDLL.h  CvGameCoreDLL.rc  CvGameCoreUtils.cpp  CvGameCoreUtils.h  CvGameInterface.cpp  CvGlobals.h  CvInfoReplacements.h  CvString.h  CvTaggedSaveFormatWrapper.h  CvUnit.cpp  fbuild.bff  wchar_utils.cpp
Tools/: Install.bat
cmake/: DepsUnpack.cmake  wine-crossbuild-toolchain.cmake
